--- a/QPUCpicker.html
+++ b/QPUCpicker.html
@@ -10,8 +10,8 @@
             --blue-main: #3498db;
             --white: #ffffff;
             --gray-text: #888;
-            --orange-4als: #f39c12;
-            --red-faf: #e67e22;
+            --yellow-4als: #f1c40f; /* Jaune plus vif */
+            --orange-faf: #e67e22;  /* Orange plus profond */
             --red-win: #c0392b;
             --btn-border: #ffffff;
         }
@@ -19,99 +19,108 @@
         body, html {
             margin: 0; padding: 0; height: 100%; width: 100%;
             background-color: var(--bg-dark); color: var(--white);
-            font-family: "Impact", "Arial Black", sans-serif; overflow: hidden;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
+            overflow: hidden;
             display: flex; flex-direction: column; align-items: center;
         }
 
-        /* --- PAGE PRINCIPALE (Main.jpg) --- */
+        /* --- PAGE PRINCIPALE --- */
         .main-container {
             width: 100%; max-width: 500px; height: 100vh;
             display: flex; flex-direction: column; align-items: center;
-            padding: 30px 20px; box-sizing: border-box;
+            padding: 20px; box-sizing: border-box;
             justify-content: space-between;
         }
 
         .btn-top-reset {
-            background: none; border: 2px solid var(--btn-border);
-            color: white; border-radius: 30px; padding: 10px 25px;
-            font-size: 1.2rem; cursor: pointer; text-transform: uppercase;
+            background: none; border: 1.5px solid var(--btn-border);
+            color: white; border-radius: 30px; padding: 8px 20px;
+            font-size: 0.9rem; cursor: pointer; text-transform: uppercase;
+            font-weight: 600;
         }
 
         .btn-prochaine-partie {
             background-color: var(--blue-main); color: white;
-            width: 90%; border-radius: 60px; padding: 25px 0;
-            font-size: 2.2rem; border: none; cursor: pointer;
-            text-transform: uppercase; margin-top: 20px;
+            width: 95%; border-radius: 50px; padding: 18px 0;
+            font-size: 1.5rem; border: none; cursor: pointer;
+            text-transform: uppercase; margin-top: 15px;
+            font-weight: 700; letter-spacing: 1px;
         }
 
         .section-title {
-            color: var(--blue-main); font-size: 1rem;
-            margin-top: 40px; text-transform: uppercase;
+            color: var(--blue-main); font-size: 0.85rem;
+            margin-top: 30px; text-transform: uppercase;
+            font-weight: 700;
         }
 
         #current-players {
             display: flex; flex-direction: column; align-items: center;
-            gap: 15px; margin-top: 20px; flex: 1; width: 100%;
+            gap: 12px; margin-top: 15px; flex: 1; width: 100%;
         }
-        .player-row { display: flex; gap: 15px; justify-content: center; width: 100%; }
+        .player-row { display: flex; gap: 10px; justify-content: center; width: 100%; }
 
         .player-badge {
-            background: white; color: black; border-radius: 40px;
-            padding: 15px 30px; font-size: 1.4rem; min-width: 100px;
+            background: white; color: black; border-radius: 30px;
+            padding: 10px 20px; font-size: 1.1rem; min-width: 90px;
             text-align: center; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            font-weight: 600; text-transform: uppercase;
+            transition: background 0.2s;
         }
 
         /* --- LEGENDE --- */
-        .legend-area { width: 100%; text-align: center; margin-bottom: 15px; }
-        .legend-title { font-size: 0.8rem; margin-bottom: 5px; color: #aaa; }
-        .legend-flex { display: flex; justify-content: center; align-items: center; gap: 5px; font-size: 0.7rem; }
-        .leg-box { padding: 5px 10px; border-radius: 15px; font-weight: bold; color: white; }
-        .arrow { color: #666; }
+        .legend-area { width: 100%; text-align: center; margin-bottom: 10px; }
+        .legend-title { font-size: 0.75rem; margin-bottom: 8px; color: #aaa; text-transform: uppercase; }
+        .legend-flex { display: flex; justify-content: center; align-items: center; gap: 4px; font-size: 0.65rem; }
+        .leg-box { padding: 4px 8px; border-radius: 12px; font-weight: 700; color: white; text-transform: uppercase; }
+        .arrow { color: #555; font-weight: bold; }
 
         /* --- BOUTONS NAVIGATION --- */
-        .nav-buttons { width: 100%; display: flex; flex-direction: column; gap: 12px; margin-bottom: 20px; }
+        .nav-buttons { width: 100%; display: flex; flex-direction: column; gap: 10px; margin-bottom: 10px; }
         .btn-nav {
-            background: none; border: 2px solid var(--btn-border);
-            color: white; border-radius: 30px; padding: 12px 0;
-            font-size: 1.1rem; cursor: pointer; text-transform: uppercase; width: 100%;
+            background: none; border: 1.5px solid var(--btn-border);
+            color: white; border-radius: 30px; padding: 10px 0;
+            font-size: 0.9rem; cursor: pointer; text-transform: uppercase; width: 100%;
+            font-weight: 600;
         }
 
-        /* --- MODALES (Participants.jpg / Stats.jpg) --- */
+        /* --- MODALES --- */
         .overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.85); display: none; z-index: 1000;
-            padding: 20px; box-sizing: border-box;
+            padding: 15px; box-sizing: border-box;
         }
         .modal {
-            background: white; border-radius: 40px; width: 100%; max-width: 450px;
-            margin: 40px auto; position: relative; padding: 20px;
+            background: white; border-radius: 30px; width: 100%; max-width: 450px;
+            margin: 30px auto; position: relative; padding: 15px;
             color: black; display: flex; flex-direction: column; max-height: 85vh;
         }
         .modal-header {
-            background: var(--blue-main); color: white; border-radius: 40px;
-            padding: 15px; text-align: center; font-size: 1.5rem; text-transform: uppercase;
-            margin-bottom: 15px;
+            background: var(--blue-main); color: white; border-radius: 30px;
+            padding: 12px; text-align: center; font-size: 1.1rem; text-transform: uppercase;
+            margin-bottom: 15px; font-weight: 700;
         }
         .close-btn {
-            position: absolute; top: -15px; right: -5px; width: 45px; height: 45px;
-            background: #d00; border-radius: 50%; color: white; border: 3px solid white;
-            font-size: 25px; display: flex; align-items: center; justify-content: center; cursor: pointer;
+            position: absolute; top: -10px; right: -5px; width: 35px; height: 35px;
+            background: #d00; border-radius: 50%; color: white; border: 2px solid white;
+            font-size: 18px; display: flex; align-items: center; justify-content: center; cursor: pointer;
+            font-weight: bold;
         }
 
         /* Liste Participants */
-        #list-p { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; overflow-y: auto; padding: 10px; }
+        #list-p { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; overflow-y: auto; padding: 5px; }
         .p-pill {
-            border: 2px solid #ddd; border-radius: 30px; padding: 10px;
-            text-align: center; font-size: 1.2rem; cursor: pointer; color: #ccc;
+            border: 1.5px solid #ddd; border-radius: 20px; padding: 8px;
+            text-align: center; font-size: 0.95rem; cursor: pointer; color: #999;
+            font-weight: 600;
         }
-        .p-pill.active { border-color: var(--blue-main); color: black; font-weight: bold; }
+        .p-pill.active { border-color: var(--blue-main); color: black; background: #f8f9fa; }
 
         /* Stats Tables */
-        .stats-table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-        .stats-table th { font-size: 0.7rem; color: #666; text-align: center; padding-bottom: 10px; }
-        .stats-table td { padding: 8px; text-align: center; font-size: 1.1rem; }
-        .name-col { text-align: left; color: #ccc; }
-        .name-col.active { color: black; font-weight: bold; }
+        .stats-table { width: 100%; border-collapse: collapse; margin-top: 5px; }
+        .stats-table th { font-size: 0.6rem; color: #888; text-align: center; padding-bottom: 8px; text-transform: uppercase; }
+        .stats-table td { padding: 10px 5px; text-align: center; font-size: 0.9rem; border-bottom: 1px solid #f0f0f0; }
+        .name-col { text-align: left; color: #bbb; font-weight: 600; }
+        .name-col.active { color: black; }
 
     </style>
 </head>
@@ -123,17 +132,16 @@
         <button class="btn-prochaine-partie" onclick="window.tirage()">Prochaine Partie</button>
         
         <div class="section-title">Partie en cours :</div>
-        <div id="current-players">
-            </div>
+        <div id="current-players"></div>
 
         <div class="legend-area">
             <div class="legend-title">Légende :</div>
             <div class="legend-flex">
-                <div class="leg-box" style="background:white; color:black; border:1px solid #ddd">Non qualifié</div>
+                <div class="leg-box" style="background:white; color:black; border:1px solid #ddd; padding: 4px 6px;">Non qualifié</div>
                 <span class="arrow">➔</span>
-                <div class="leg-box" style="background:var(--orange-4als)">4 à la suite</div>
+                <div class="leg-box" style="background:var(--yellow-4als)">4 à la suite</div>
                 <span class="arrow">➔</span>
-                <div class="leg-box" style="background:var(--red-faf)">Face à face</div>
+                <div class="leg-box" style="background:var(--orange-faf)">Face à face</div>
                 <span class="arrow">➔</span>
                 <div class="leg-box" style="background:var(--red-win)">Gagnant</div>
             </div>
@@ -146,42 +154,11 @@
         </div>
     </div>
 
-    <div id="modal-p" class="overlay">
-        <div class="modal">
-            <div class="close-btn" onclick="window.closeM('modal-p')">✕</div>
-            <div class="modal-header" id="header-p-count">Participants (0)</div>
-            <div style="display:flex; gap:10px; margin-bottom:15px;">
-                <input type="text" id="add-input" placeholder="Ajouter un participant..." style="flex:1; border-radius:20px; border:1px solid #ccc; padding:10px;">
-                <button onclick="window.addPlayer()" style="background:var(--blue-main); color:white; border:none; width:40px; border-radius:50%; font-size:20px;">+</button>
-            </div>
-            <div id="list-p"></div>
-        </div>
-    </div>
-
-    <div id="modal-sj" class="overlay">
-        <div class="modal">
-            <div class="close-btn" onclick="window.closeM('modal-sj')">✕</div>
-            <div class="modal-header">Parties jouées aujourd'hui</div>
-            <table class="stats-table">
-                <tr><th style="text-align:left"></th><th>PARTIES JOUÉES</th><th>SCORE DE MIXAGE</th></tr>
-                <tbody id="list-stats-jour"></tbody>
-            </table>
-        </div>
-    </div>
-
-    <div id="modal-sp" class="overlay">
-        <div class="modal">
-            <div class="close-btn" onclick="window.closeM('modal-sp')">✕</div>
-            <div class="modal-header">Statistiques</div>
-            <table class="stats-table">
-                <tr><th style="text-align:left"></th><th>PARTIES JOUÉES</th><th style="color:var(--orange-4als)">% 4 ALS</th><th style="color:var(--red-faf)">% FaF</th><th style="color:var(--red-win)">% WIN</th><th style="color:var(--blue-main)">WINS</th></tr>
-                <tbody id="list-stats-perm"></tbody>
-            </table>
-        </div>
-    </div>
+    <div id="modal-p" class="overlay"><div class="modal"><div class="close-btn" onclick="window.closeM('modal-p')">✕</div><div class="modal-header" id="header-p-count">Participants (0)</div><div style="display:flex; gap:10px; margin-bottom:15px;"><input type="text" id="add-input" placeholder="Nouveau nom..." style="flex:1; border-radius:20px; border:1px solid #ccc; padding:10px;"><button onclick="window.addPlayer()" style="background:var(--blue-main); color:white; border:none; width:40px; border-radius:50%; font-size:20px; cursor:pointer;">+</button></div><div id="list-p"></div></div></div>
+    <div id="modal-sj" class="overlay"><div class="modal"><div class="close-btn" onclick="window.closeM('modal-sj')">✕</div><div class="modal-header">Parties jouées aujourd'hui</div><table class="stats-table"><tr><th style="text-align:left">NOM</th><th>PARTIES</th><th>MIXAGE</th></tr><tbody id="list-stats-jour"></tbody></table></div></div>
+    <div id="modal-sp" class="overlay"><div class="modal"><div class="close-btn" onclick="window.closeM('modal-sp')">✕</div><div class="modal-header">Statistiques</div><table class="stats-table"><tr><th style="text-align:left">NOM</th><th>PJ</th><th style="color:var(--yellow-4als)">% 4ALS</th><th style="color:var(--orange-faf)">% FAF</th><th style="color:var(--red-win)">% WIN</th><th style="color:var(--blue-main)">WINS</th></tr><tbody id="list-stats-perm"></tbody></table></div></div>
 
 <script type="module">
-    // --- Logique Firebase identique ---
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
     import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
@@ -223,10 +200,9 @@
                 const s = window.playerStates[n] || 0;
                 const b = document.createElement('div');
                 b.className = 'player-badge';
-                if(s === 1) b.style.background = 'var(--orange-4als)';
-                if(s === 2) b.style.background = 'var(--red-faf)';
-                if(s === 3) b.style.background = 'var(--red-win)';
-                if(s > 0) b.style.color = 'white';
+                if(s === 1) { b.style.background = 'var(--yellow-4als)'; b.style.color = 'black'; }
+                if(s === 2) { b.style.background = 'var(--orange-faf)'; b.style.color = 'white'; }
+                if(s === 3) { b.style.background = 'var(--red-win)'; b.style.color = 'white'; }
                 b.innerText = n;
                 b.onclick = () => window.cycleStatus(n);
                 rowDiv.appendChild(b);
@@ -286,16 +262,18 @@
         const b = document.getElementById('list-stats-jour'); b.innerHTML = '';
         window.players.forEach(p => {
             const s = window.stats[p.name] || {games:0};
-            b.innerHTML += `<tr><td class="name-col ${p.active?'active':''}">${p.name}</td><td>${s.games}</td><td>-1</td></tr>`;
+            b.innerHTML += `<tr><td class="name-col ${p.active?'active':''}">${p.name}</td><td>${s.games}</td><td>0</td></tr>`;
         });
     }
 
     function renderSP() {
         const b = document.getElementById('list-stats-perm'); b.innerHTML = '';
         window.players.forEach(p => {
-            b.innerHTML += `<tr><td class="name-col ${p.active?'active':''}">${p.name}</td><td>2</td><td style="color:var(--orange-4als)">10%</td><td style="color:var(--red-faf)">10%</td><td style="color:var(--red-win)">10%</td><td style="color:var(--blue-main)">2</td></tr>`;
+            b.innerHTML += `<tr><td class="name-col ${p.active?'active':''}">${p.name}</td><td>0</td><td>0%</td><td>0%</td><td>0%</td><td>0</td></tr>`;
         });
     }
+
+    window.resetSession = async () => { if(confirm("Nouvelle séance ?")) { window.poolEnJeu = []; window.players.forEach(p => window.stats[p.name] = {games:0}); window.renderDisplay(); await save(); }};
 </script>
 </body>
 </html>
