--- a/QPUCpicker.html
+++ b/QPUCpicker.html
@@ -168,7 +168,7 @@
 
 <script>
     const CSV_URL = `https://docs.google.com/spreadsheets/d/e/2PACX-1vQPwvi8vHPm7xDs4Yusv0xmZq7ek9Z2ZQJ8DvcWITvkoiwanW5pGwwqJzESzeBNW0LEa_WibdeA3b0Z/pub?output=csv`;
-    const WEB_APP_URL = "TON_URL_WEB_APP_GOOGLE_SCRIPT"; 
+    const WEB_APP_URL = `https://script.google.com/macros/s/AKfycbxfR7GMysYxTeAoMTX0355OOVdkLERHeHkyRjpOWC9hVL_PJsIHVH81ufsqYivMOmso/exec`; 
 
     const INITIAL_LIST = ["ANTOINE", "CYRILLE", "DAMIEN", "DANIÈLE", "ELIOTT", "ERIC", "GEOFFREY", "HENRICK", "LOUIS", "LYSIANE", "MADELEINE", "MICHÈLE", "PATRICE", "PATRICIA C", "PATRICIA L", "PHILIPPE L", "PHILIPPE M", "PHILIPPE O", "RENÉ", "ROLANDE", "SÉBASTIEN"];
 
@@ -314,3 +314,4 @@
 </script>
 </body>
 </html>
+
